# fonts

./: 31-croscore-elementary.conf  README.md  meson.build  mscorefonts-test.html
.github/workflows/: main.yml
capture-it/: Cpr.Sparhelt font License.txt
debian/: changelog  control  copyright  fonts-capture-it-elementary.install  fonts-croscore-config-elementary.install  fonts-croscore-config-elementary.links  fonts-daniel-elementary.install  fonts-hvd-bodedo-elementary.install  fonts-inter-elementary.install  fonts-jenna-sue-elementary.install  fonts-khmer-mondulkiri-elementary.install  fonts-limelight-elementary.install  fonts-lobster-elementary.install  fonts-open-sans-elementary.install  fonts-open-sans-emoji-elementary.install  fonts-operating-instructions-elementary.install  fonts-plainblack-elementary.install  fonts-raleway-elementary.install  fonts-redacted-elementary.install  fonts-roboto-mono-elementary.install  fonts-symbola-elementary.install  fonts-wc-roughtrad-elementary.install
khmer-mondulkiri/: OFL.txt
limelight/: LimeLight SIL OFL Font License.txt
redacted/: meson.build
roboto-mono/: meson.build
symbola/: license.txt
