install_data(
    'RobotoMono-Bold.ttf',
    install_dir: fonts_dir
)

install_data(
    'RobotoMono-BoldItalic.ttf',
    install_dir: fonts_dir
)

install_data(
    'RobotoMono-Italic.ttf',
    install_dir: fonts_dir
)

install_data(
    'RobotoMono-Light.ttf',
    install_dir: fonts_dir
)

install_data(
    'RobotoMono-LightItalic.ttf',
    install_dir: fonts_dir
)

install_data(
    'RobotoMono-Medium.ttf',
    install_dir: fonts_dir
)

install_data(
    'RobotoMono-MediumItalic.ttf',
    install_dir: fonts_dir
)

install_data(
    'RobotoMono-Regular.ttf',
    install_dir: fonts_dir
)

install_data(
    'RobotoMono-Thin.ttf',
    install_dir: fonts_dir
)

install_data(
    'RobotoMono-ThinItalic.ttf',
    install_dir: fonts_dir
)
