fonts = [
    'RobotoMono-Bold.ttf',
    'RobotoMono-BoldItalic.ttf',
    'RobotoMono-Italic.ttf',
    'RobotoMono-Light.ttf',
    'RobotoMono-LightItalic.ttf',
    'RobotoMono-Medium.ttf',
    'RobotoMono-MediumItalic.ttf',
    'RobotoMono-Regular.ttf',
    'RobotoMono-Thin.ttf',
    'RobotoMono-ThinItalic.ttf',
]

foreach font : fonts
    install_data(
        font,
        install_dir: fonts_dir / 'roboto-mono-elementary'
    )
endforeach
